--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kui.nvim",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "A neovim UI framework using the kitty graphics protocol",
   "main": "index.js",
   "scripts": {
@@ -9,9 +9,9 @@
     "start": "tstl --watch"
   },
   "files": [
-      "/dist"
-    , "/types"
-    , "/index.d.ts"
+    "/dist",
+    "/types",
+    "/index.d.ts"
   ],
   "repository": {
     "type": "git",
