--- a/tsconfig-declaration.json
+++ b/tsconfig-declaration.json
@@ -2,6 +2,7 @@
   "include": ["src/**/*"],
   "compilerOptions": {
     "strict": true,
+    "allowSyntheticDefaultImports": true,
     "target": "esnext",
     "lib": ["esnext"],
     "moduleResolution": "node",
